style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');

html{
  overflow-x: hidden;
}
html, body {
  height : 100%;
  width: 100%;
  font-family : 'Poppins', serif;
  color: #222;
}
.navbar {
  padding: .8rem;
  border-bottom: 1px solid #d5d5d5
}
.nav-item{
  color: #0037FF
}
.nav-link{
  font-size: 1.05em !important;
}
.carousel-inner img{
  width: 100%;
  height: 100%;
}
.carousel-caption {
  position: absolute;
  top: 50%;
  transform:translateY(-50%);
}
.carousel-caption h1 {
  font-size : 500%;
  font-weight: 400;
  text-shadow: 1px 1px 15px #000;
}
.carousel-caption h3{
  font-size: 175%;
  font-weight: 400;
  text-shadow: 1px 1px 10px #000;
  padding-bottom: 1rem;
}
.welcome{
  width: 75%;
  margin: 0 auto;
  padding-top : 2rem;
}
.welcome hr{
  border-top: 2px solid #b4b4b4
  width: 95%;
  margin-top: .3rem;
  margin-bottom: 1rem;
}
.fa-code{
  color: #e54d26
}
.fa-bold{
  color: #563d7c
}
.fa-css3{
  color: #2163af;
}
.fa-code, .fa-bold, .fa-css3, .fa-twitter, .fa-sign-language,.fa-user-md{
  font-size: 4em;
  margin: 1rem;
}
.social a{
  font-size: 4.5em;
  padding: 10rem;
  text-decoration:none;

}
.fa-github{
  color: #000;
}
.fa-linkedin{
  color: #0077B5;
}
.fa-twitter{
  color: #1DA1F2;
}
.fa-sign-language{
  color: #000
}
.fa-user-md{
  color: #EA80B0
}
.fa-github:hover,
.fa-linkedin:hover,
.fa-twitter:hover,
.fa-sign-language:hover,
.fa-user-md:hover{
  color: #d5d5d5
}
.img-thumbnail{
  border: 1px solid #ddd;
  border-radius: 4px;
  padding: 5px;
  width:50%;
  height:100%;
}
.img-responsive{
  border: 1px solid #ddd;
  border-radius: 4px;
  padding:5px;
  width: 150px;
}
.intro{
  line-height: 1.75em;
  font-size: 20pt;
}
@media(max-width: 768px) {
  .carousel-caption{
    top: 45%;
  }
  .carousel-caption h1{
    font-size: 350%;
  }
  .carousel-caption h3{
    font-size:140%;
  }
  .carousel-caption .btn
  {
    font-size: 95%;
    padding: 8px 14px;
  }
}
@media (max-width: 576px)
{
  .carousel-caption{
    top: 40%;
  }
  .carousel-caption h1{
    font-size: 250%;
  }
  .carousel-caption h3{
    font-size:110%;
  }
  .carousel-caption .btn
  {
    font-size: 90%;
    padding: 4px 8px;
  }
}
@media (max-width: 400px)
{
  .carousel-caption{
    top: 35%;
  }
  .carousel-caption h1{
    font-size: 200%;
  }
  .carousel-caption h3{
    font-size:100%;
  }
  .carousel-caption .btn
  {
    font-size: 80%;
    padding: 2px 4px;
  }
}
/*--- Bootstrap Padding Fix --*/
[class*="col-"] {
    padding: 1rem;
}
/*-- devpost font from icomoon--*/
@font-face {
  font-family: 'icomoon';
  src:  url('img/icomoon.eot?kxim24');
  src:  url('img/icomoon.eot?kxim24#iefix') format('embedded-opentype'),
    url('img/icomoon.ttf?kxim24') format('truetype'),
    url('img/icomoon.woff?kxim24') format('woff'),
    url('img/icomoon.svg?kxim24#icomoon') format('svg');
  font-weight: normal;
  font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icomoon' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-devpost_medium:before {
  content: "\e900";
}
.icon-devpost_medium
{
  color: #163E52;
}
.icon-devpost_medium:hover {
  color: #d5d5d5;
}

/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

